# chemistry

./: README.md  index.rst  pyproject.toml  setup.py  versions.md
docs/: MakeFile
docs/source/: conf.py
src/: main.py
src/chemistry/: __init__.py  conversions.py  formulas.py  periodic.py
src/chemistry_ch.egg-info/: PKG-INFO  SOURCES.txt
tests/: test.py
