[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chemistry_calebhan"
version = "0.0.2"
authors = [
  { name="Caleb Han", email="calebhantech@gmail.com" },
]
description = "A package for chemistry equations and formulas"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/calebyhan/chemistry"
"Bug Tracker" = "https://github.com/calebyhan/chemistry/issues"